versions/0.27.0/_sources/refs/_aws-cdk_aws-dlm.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"wrhk1C4v7virDWAXoHitR7TKKiZQiyARIqQ8DIhpT9E="}

@aws-cdk/aws-dlm
================

.. mdinclude:: ./__aws-cdk_aws-dlm.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.DLM/0.27.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.DLM" Version="0.27.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.DLM --version 0.27.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.DLM" version="0.27.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/dlm/0.27.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:dlm:jar:0.27.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="dlm" rev="0.27.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>dlm</artifactId>
           <version>0.27.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:dlm:0.27.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='dlm', version='0.27.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-dlm/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-dlm@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-dlm": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-dlm@0.27.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-dlm/v/0.27.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-dlm@0.27.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-dlm": "^0.27.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-dlm@0.27.0



.. py:module:: @aws-cdk/aws-dlm

CfnLifecyclePolicy
^^^^^^^^^^^^^^^^^^

.. py:class:: CfnLifecyclePolicy(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DLM;

      .. code-tab:: java

         import software.amazon.awscdk.services.dlm.CfnLifecyclePolicy;

      .. code-tab:: javascript

         const { CfnLifecyclePolicy } = require('@aws-cdk/aws-dlm');

      .. code-tab:: typescript

         import { CfnLifecyclePolicy } from '@aws-cdk/aws-dlm';



   A CloudFormation `AWS::DLM::LifecyclePolicy`



   :extends: :py:class:`@aws-cdk/cdk.CfnResource`\ 
   :param scope: - scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: - scoped id of the resource
   :type id: string
   :param props: - resource properties
   :type props: :py:class:`~@aws-cdk/aws-dlm.CfnLifecyclePolicyProps`\  *(optional)*

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.CfnResource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: lifecyclePolicyArn

      :type: string *(readonly)*


   .. py:attribute:: lifecyclePolicyId

      :type: string *(readonly)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-dlm.CfnLifecyclePolicyProps`\  *(readonly)*

   .. py:class:: CreateRuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DLM;

         .. code-tab:: java

            import software.amazon.awscdk.services.dlm.CfnLifecyclePolicy.CreateRuleProperty;

         .. code-tab:: javascript

            // CfnLifecyclePolicy.CreateRuleProperty is an interface

         .. code-tab:: typescript

            import { CfnLifecyclePolicy.CreateRuleProperty } from '@aws-cdk/aws-dlm';





      .. py:attribute:: interval

         `CfnLifecyclePolicy.CreateRuleProperty.Interval`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


      .. py:attribute:: intervalUnit

         `CfnLifecyclePolicy.CreateRuleProperty.IntervalUnit`



         :type: string *(readonly)*


      .. py:attribute:: times

         `CfnLifecyclePolicy.CreateRuleProperty.Times`



         :type: string[] *(optional)* *(readonly)*


   .. py:class:: PolicyDetailsProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DLM;

         .. code-tab:: java

            import software.amazon.awscdk.services.dlm.CfnLifecyclePolicy.PolicyDetailsProperty;

         .. code-tab:: javascript

            // CfnLifecyclePolicy.PolicyDetailsProperty is an interface

         .. code-tab:: typescript

            import { CfnLifecyclePolicy.PolicyDetailsProperty } from '@aws-cdk/aws-dlm';





      .. py:attribute:: resourceTypes

         `CfnLifecyclePolicy.PolicyDetailsProperty.ResourceTypes`



         :type: string[] *(optional)* *(readonly)*


      .. py:attribute:: schedules

         `CfnLifecyclePolicy.PolicyDetailsProperty.Schedules`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dlm.CfnLifecyclePolicy.ScheduleProperty`\ )[] *(optional)* *(readonly)*


      .. py:attribute:: targetTags

         `CfnLifecyclePolicy.PolicyDetailsProperty.TargetTags`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.CfnTag`\ )[] *(optional)* *(readonly)*


   .. py:class:: RetainRuleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DLM;

         .. code-tab:: java

            import software.amazon.awscdk.services.dlm.CfnLifecyclePolicy.RetainRuleProperty;

         .. code-tab:: javascript

            // CfnLifecyclePolicy.RetainRuleProperty is an interface

         .. code-tab:: typescript

            import { CfnLifecyclePolicy.RetainRuleProperty } from '@aws-cdk/aws-dlm';





      .. py:attribute:: count

         `CfnLifecyclePolicy.RetainRuleProperty.Count`



         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:class:: ScheduleProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.DLM;

         .. code-tab:: java

            import software.amazon.awscdk.services.dlm.CfnLifecyclePolicy.ScheduleProperty;

         .. code-tab:: javascript

            // CfnLifecyclePolicy.ScheduleProperty is an interface

         .. code-tab:: typescript

            import { CfnLifecyclePolicy.ScheduleProperty } from '@aws-cdk/aws-dlm';





      .. py:attribute:: copyTags

         `CfnLifecyclePolicy.ScheduleProperty.CopyTags`



         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


      .. py:attribute:: createRule

         `CfnLifecyclePolicy.ScheduleProperty.CreateRule`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dlm.CfnLifecyclePolicy.CreateRuleProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: name

         `CfnLifecyclePolicy.ScheduleProperty.Name`



         :type: string *(optional)* *(readonly)*


      .. py:attribute:: retainRule

         `CfnLifecyclePolicy.ScheduleProperty.RetainRule`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-dlm.CfnLifecyclePolicy.RetainRuleProperty`\  *(optional)* *(readonly)*


      .. py:attribute:: tagsToAdd

         `CfnLifecyclePolicy.ScheduleProperty.TagsToAdd`



         :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.CfnTag`\ )[] *(optional)* *(readonly)*



   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.prepare>`

      Automatically detect references in this CfnElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnElement <@aws-cdk/cdk.CfnElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:attribute:: referenceToken

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnRefElement <@aws-cdk/cdk.CfnRefElement.referenceToken>`

      Return a token that will CloudFormation { Ref } this stack element



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Token`\  *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.CfnResource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.IResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.CfnResource <@aws-cdk/cdk.CfnResource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


CfnLifecyclePolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnLifecyclePolicyProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.DLM;

      .. code-tab:: java

         import software.amazon.awscdk.services.dlm.CfnLifecyclePolicyProps;

      .. code-tab:: javascript

         // CfnLifecyclePolicyProps is an interface

      .. code-tab:: typescript

         import { CfnLifecyclePolicyProps } from '@aws-cdk/aws-dlm';



   Properties for defining a `AWS::DLM::LifecyclePolicy`





   .. py:attribute:: description

      `AWS::DLM::LifecyclePolicy.Description`



      :type: string *(optional)* *(readonly)*


   .. py:attribute:: executionRoleArn

      `AWS::DLM::LifecyclePolicy.ExecutionRoleArn`



      :type: string *(optional)* *(readonly)*


   .. py:attribute:: policyDetails

      `AWS::DLM::LifecyclePolicy.PolicyDetails`



      :type: :py:class:`~@aws-cdk/aws-dlm.CfnLifecyclePolicy.PolicyDetailsProperty`\  or :py:class:`@aws-cdk/cdk.Token`\  *(optional)* *(readonly)*


   .. py:attribute:: state

      `AWS::DLM::LifecyclePolicy.State`



      :type: string *(optional)* *(readonly)*


